--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.4.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
@@ -21,6 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8.4.31",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
